Adding chapter re All or nothing

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <section>
           <h1>Ingeniería</h1>
           <h3>Ingeniería en proyectos de Machine Learning</h3>
+          <br/>
+          <p>
+              Muestrario de lo que nos funcionó
+          </p>
+          <br/>
+          <p>
+            <small>Created by <a href="https://github.com/jmansilla/">Javier Mansilla </a> @ <a href="https://github.com/machinalis/">Machinalis</a></small>
+          </p>
         </section>
 
         <section>
@@ -59,20 +67,46 @@
                 - Developers / Ingenieros
                 - Managers
                 - Researchers
+            * Nota: ¡Equipos de trabajo! Si trabajás solo, algunas partes pueden ser distintas
           </aside>
 
         </section>
 
         <section>
-          <h2>¿Cuánto aplica de todo esto a un desarrollo ML?</h2>
-          <h1 class="fragment">TODO</h1>
-          <h1 class="fragment">NADA</h1>
-          <aside class="notes">
-            This slide has fragments which are also stepped through in the notes window.
-          </aside>
+            <section>
+              <h2>¿Cuánto aplica a un desarrollo ML?</h2>
+              <h1 class="fragment">TODO</h1>
+              <p class="fragment">aunque algunas veces</p>
+              <h1 class="fragment">NADA</h1>
+              <aside class="notes"></aside>
+            </section>
+            <section>
+              <h1>TODO</h1>
+              <p class="fragment">El resultado final es una <strong>pieza de software</strong></p>
+              <p class="fragment">instalado en algún server</p>
+              <p class="fragment">resolviendo problemas a algún usuario</p>
+              <p class="fragment">donde quien lo mantenga puede no tener formación en ML</p>
+              <aside class="notes" data-markdown>
+                  <script type="text/template">
+                  Cobra importancia que se haya contemplado lo usual:
 
+                   - doc (diseño, uso, mantenimiento)
+                   - logging
+                   - testing
+                   - etc
+                    </script>
+              </aside>
+            </section>
+            <section>
+              <h2>NADA</h2>
+              <p class="fragment">Explorando hipótesis</p>
+              <p class="fragment">Generando datos: corpora, gráficos, validaciones, experimentos</p>
+              <p class="fragment">Generando un baseline</p>
+              <p class="fragment">Explorando hipótesis</p>
+              <h3 class="fragment">Ojo con lo de *NADA*</h3>
+              <aside class="notes"></aside>
+            </section>
         </section>
-
         <section>
           <h2>Preguntas</h2>
           <p>
