warning respect "pay zero attention" note

--- a/index.html
+++ b/index.html
@@ -98,13 +98,57 @@
               </aside>
             </section>
             <section>
-              <h2>NADA</h2>
-              <p class="fragment">Explorando hipótesis</p>
-              <p class="fragment">Generando datos: corpora, gráficos, validaciones, experimentos</p>
+              <h1>NADA</h1>
+              <aside class="notes" data-markdown>
+                  - Notebooks
+                  - buscando insights
+                  - primera aproximación para entender un problema
+                  - Si vas a compartir:
+                    - documentá
+                    - limpiá
+                    - nunca es excusa para variables
+                  - Si
+              </aside>
+              <p class="fragment">Explorando datos</p>
               <p class="fragment">Generando un baseline</p>
               <p class="fragment">Explorando hipótesis</p>
+              <p class="fragment">Generando datos: corpora, gráficos, validaciones</p>
+              <p class="fragment">Experimentos</p>
               <h3 class="fragment">Ojo con lo de *NADA*</h3>
-              <aside class="notes"></aside>
+            </section>
+            <section>
+              <h1 class="quotation">"NADA"</h1>
+              <aside class="notes" data-markdown>
+                  - Notebooks
+                  - buscando insights
+                  - primera aproximación para entender un problema
+                  - Si vas a compartir:
+                    - documentá
+                    - limpiá
+                    - nunca es excusa para variables
+                  - Si
+              </aside>
+              <p class="fragment">Nunca hay excusas para...</p>
+              <section class="fragment"><pre>
+                  <code data-trim data-noescape>
+def el_que_invoca():
+    return "fu###er"
+
+def pep8IsDead(QueVivaElCamelCase=3):
+    ...
+
+def check_stuff(a, b, c, d):
+    a = [w for w in a if len(w) > 3]
+    a += [w for w in b if w not in c]
+    a = len(a)
+    return a >= 8
+                  </code></pre>
+              </section>
+    <ul class="fragment">
+        <li>Testing <strong>es</strong> una herramienta</li>
+        <li>Modularización <strong>es</strong> una herramienta</li>
+        <li>etc</li>
+    </ul>
             </section>
         </section>
         <section>
