--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <aside class="notes"></aside>
             </section>
             <section>
-              <h1>TODO</h1>
+              <h1>TODO <small>porque...</small></h1>
               <p class="fragment">El resultado final es una <strong>pieza de software</strong></p>
               <p class="fragment">instalado en algún server</p>
               <p class="fragment">resolviendo problemas a algún usuario</p>
@@ -98,7 +98,7 @@
               </aside>
             </section>
             <section>
-              <h1>NADA</h1>
+              <h1>NADA <small>cuando...</small></h1>
               <aside class="notes" data-markdown>
                   - Notebooks
                   - buscando insights
@@ -109,6 +109,7 @@
                     - nunca es excusa para variables
                   - Si
               </aside>
+              <p class="fragment">El resultado final <strong>NO</strong> es software</p>
               <p class="fragment">Explorando datos</p>
               <p class="fragment">Generando un baseline</p>
               <p class="fragment">Explorando hipótesis</p>
