notes re "nada"

--- a/index.html
+++ b/index.html
@@ -115,19 +115,13 @@
               <p class="fragment">Explorando hipótesis</p>
               <p class="fragment">Generando datos: corpora, gráficos, validaciones</p>
               <p class="fragment">Experimentos</p>
-              <h3 class="fragment">Ojo con lo de *NADA*</h3>
-            </section>
+                </section>
             <section>
-              <h1 class="quotation">"NADA"</h1>
+              <h1 class="quotation">NADA</h1>
               <aside class="notes" data-markdown>
                   - Notebooks
                   - buscando insights
                   - primera aproximación para entender un problema
-                  - Si vas a compartir:
-                    - documentá
-                    - limpiá
-                    - nunca es excusa para variables
-                  - Si
               </aside>
               <p class="fragment">Nunca hay excusas para...</p>
               <section class="fragment"><pre>
@@ -145,11 +139,16 @@ def check_stuff(a, b, c, d):
     return a >= 8
                   </code></pre>
               </section>
-    <ul class="fragment">
-        <li>Testing <strong>es</strong> una herramienta</li>
-        <li>Modularización <strong>es</strong> una herramienta</li>
-        <li>etc</li>
-    </ul>
+            <p class="fragment">
+                Las buenas prácticas <strong>son herramientas</strong>
+            </p>
+            <aside class="notes" data-markdown>
+                - Si vas a compartir:
+                  - documentá
+                  - limpiá
+                - Testing para afianzar
+                - Pair review => improve calidad para permitirlo 
+            </aside>
             </section>
         </section>
         <section>
