what is different here

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="slides">
         <section>
           <h1>Ingeniería</h1>
-          <h3>Ingeniería en proyectos de Machine Learning</h3>
+          <h3>Ingeniería en proyectos de <span class="ds">Data Science</span> &amp;
+              <span class="ml">Machine Learning<span></h3>
           <br/>
           <p>
               Muestrario de lo que nos funcionó
@@ -147,10 +148,36 @@ def check_stuff(a, b, c, d):
                   - documentá
                   - limpiá
                 - Testing para afianzar
-                - Pair review => improve calidad para permitirlo 
+                - Pair review => improve calidad para permitirlo
             </aside>
             </section>
         </section>
+
+        <section>
+            <section>
+              <h2>Ingeniería <small>haciendo DS / ML</small></h2>
+              <p>Muestrario de lo que nos funcionó</p>
+              <p class="fragment" data-markdown>
+                  En **EQUIPOS** de desarrollo dando **soluciones reales** a **usuarios reales**
+              </p>
+          </section>
+          <section>
+            <h2>Diferencias <small>con otros proyectos</small></h2>
+            <aside class="notes" data-markdown>
+                # A) de parsear los datos, de formatear un corpus, de definir mis features, de...
+                # B)
+                  - frameworks con madurez faltante
+                  - código repetitivo
+                  - mucho ad-hoc
+            </aside>
+            <p class="fragment">Muchas maneras de hacer lo mismo</p>
+            <p class="fragment">Funcionalidad no reusable</p>
+            <p class="fragment">Muchos pasos manuales, mucho tiempo</p>
+            <p class="fragment">Mucho tiempo de espera</p>
+          </section>
+
+      </section>
+
         <section>
           <h2>Preguntas</h2>
           <p>
