--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ def check_stuff(a, b, c, d):
 
           <section>
             <h2>Development Tips</h2>
-            <h5>Muestrario de lo que nos funcionó - 2</h5>
+            <h5>Muestrario de lo que nos funcionó (2)</h5>
             <aside class="notes" data-markdown>
             </aside>
             <p class="fragment">Cuando el prototipo (chanchada) funciona, integrarlo limpio</p>
