added the missing sections to fulfill the skeleton

--- a/index.html
+++ b/index.html
@@ -210,15 +210,14 @@ def check_stuff(a, b, c, d):
 
 
         <section>
-            <h2>Ingeniería <small>haciendo DS / ML</small></h2>
-            <p>Muestrario de lo que nos funcionó</p>
+            <h2>Template de proyecto<h2>
+            <p>Nuestro actual template de trabajo</p>
+            <p class="fragment">rellenar<p>
         </section>
 
         <section>
-          <h2>Preguntas</h2>
-          <p>
-            - ¿Tengo que incorporar Machine Learning? No puedo usar heurísticas y algoritmos
-          </p>
+          <h2>Ejercicio</h2>
+          <p>To be defined...</p>
         </section>
 
 
