skeleton instead of template. better idea

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ def check_stuff(a, b, c, d):
 
 
         <section>
-            <h2>Template de proyecto<h2>
-            <p>Nuestro actual template de trabajo</p>
+            <h2>Esqueleto de proyecto</h2>
+            <p>Nuestro "esqueleto" actual de trabajo</p>
             <p class="fragment">rellenar<p>
         </section>
 
