making info fit the screen

--- a/index.html
+++ b/index.html
@@ -60,15 +60,18 @@
                 Claridad sobre quiénes son los stakeholders
             </p>
 
-          <aside class="notes">
+          <aside class="notes" data-markdown>
             Primer listado: grandes necesidades
+
             Segundo listado: recursos que conducen hacia las necesidades
+
             Destinatarios:
+
                 - Cliente y su multiplicidad
                 - Developers / Ingenieros
                 - Managers
                 - Researchers
-            * Nota: ¡Equipos de trabajo! Si trabajás solo, algunas partes pueden ser distintas
+            Nota: ¡Equipos de trabajo! Si trabajás solo, algunas partes pueden ser distintas
           </aside>
 
         </section>
@@ -194,9 +197,6 @@ def check_stuff(a, b, c, d):
 
           <section>
             <h2>Development Tips</h2>
-            <h5>Muestrario de lo que nos funcionó (2)</h5>
-            <aside class="notes" data-markdown>
-            </aside>
             <p class="fragment">Cuando el prototipo (chanchada) funciona, integrarlo limpio</p>
             <p class="fragment">Pair Review: de desarrollo, de experimentación, de diseños</p>
             <p class="fragment">Buscar soluciones pre-existentes</p>
@@ -205,11 +205,10 @@ def check_stuff(a, b, c, d):
             <p class="fragment">Arrancar siempre por lo simple: modelos, esquemas, etc</p>
             <p class="fragment">Documentar, documentar, documentar</p>
             <p class="fragment">Involucrar temprano al devop</p>
-            <p class="fragment">NO mantener código muerto</p>
+            <p class="fragment">Dead code is dead</p>
           </section>
 
       </section>
-
 
       <section>
         <section>
