bin and ui with some extra notes

--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@ def list_data_points():
 
         <section>
           <h2><small>bin</small></h2>
-          <p>bolsa de utilities que sean de conveniencia y uso recurrente</p>
+          <p>Bolsa de utilities que sean de conveniencia y uso recurrente</p>
+          <p>Entrenar, adquirir datos y dumpear, crawlear, verificadores de calidad, etc
         </section>
 
         <section>
@@ -319,8 +320,14 @@ def list_data_points():
         </section>
 
         <section>
+          <h2><small>ui</small></h2>
+          <p>User interface. Método de comunicación con quienes vayan a usarlo.</p>
+          <p>Algunos ejemplos: API rest, sitio Flask, Django, otros...</p>
+
+        </section>
+        <section>
           <h2>Ejercicio</h2>
-          <p>To be defined...</p>
+          <p>...</p>
         </section>
 
     </section>
